Changed background clipping of content to prevent border from disappearing due to scroll bar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -120,6 +120,8 @@ body {
 	position: relative;
 
 	box-sizing: border-box;
+	padding: 0rem;
+	background-clip: padding-box;
 
 	/*padding-right: 1rem;*/
 
